Renamed component to blackjack namespace

--- a/template.hbs
+++ b/template.hbs
@@ -1,4 +1,4 @@
-<div class="assets-test">
+<div class="blackjack-assets-test">
     <dl>
         <dt>Logo</dt>
         <dd>{{#if icons.sky}}{{{icons.sky}}}{{else}}{{{renderSVG "site-logo"}}}{{/if}}</dd>
