--- a/styles/components/blackjack-assets-test.scss
+++ b/styles/components/blackjack-assets-test.scss
@@ -7,4 +7,4 @@
 // @import 'sky-toolkit-ui/components/tables';
 // @import 'sky-toolkit-ui/components/typography';
 
-.assets-test { color: green; }
+.blackjack-assets-test { color: green; }
